@@ -2,8 +2,9 @@
 ### All Contents Copyright The Center for Computer-Assisted Legal Instruction
 ### This change log is also displayed via changes.php. Formatting here matters.
 
-# 2014-10-21
+# 2014-10-22
 * Fixed - a new page now has a button
+* Added - Polish language
 
 # 2014-09-24 5.0.1.40
 * New - Varable edit popup displays pages using said variable
